project/tests/in_progress/for_main/bad/types/base_types/type_char/type_char07.c
#include <stdio.h>

int c1 = 'D';

int main() {
  printf("%d\n", c1);
  printf("%c\n", c1);

  return 0;
}
